just do it quicker

--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
   <h3>hello hi hello hi</h3>
   <h1>Desi Kalaakar</h1>
+  <p> apne toh mummy daddi , dunya ke suchu ke sare , dil toh ukhad de, yaar tera superstar desi Kalaakar, mai putt jaat da mane na di har </p>
 </body>
 </html>
